--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.19.2",
     "element-ui": "^2.3.4",
     "qs": "^6.9.1",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-cli": "^2.9.6"
   },
   "engines": {
     "node": ">=6"
