--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -1,4 +1,12 @@
 #node-v13.10.1
+npm install -g vue-cli
+vue init webpack demo
+cd demo
 npm i element-ui -S
 #in frontend
 npm i
+
+
+
+#打包
+npm run build
