--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "axios": "^0.19.2",
     "element-ui": "^2.13.0",
+    "js-yaml": "^3.13.1",
+    "mem": "^4.0.0",
+    "serialize-javascript": "^2.1.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -48,9 +52,9 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack": "^3.12.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-dev-server": "^2.9.6",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
