--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "acorn": "^7.1.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "echarts": "^4.7.0",
     "element-ui": "^2.4.5",
     "minimist": "^1.2.5",
     "vue": "^2.6.11",
@@ -26,7 +27,7 @@
     "@vue/cli-service": "~4.2.0",
     "@vue/eslint-config-standard": "^5.1.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
