--- a/main/requirements.txt
+++ b/main/requirements.txt
@@ -1,8 +1,8 @@
 #https://www.lfd.uci.edu/~gohlke/pythonlibs/#wordcloud
-flask=1.1.1
-flask_script=2.0.6
-paramiko=2.7.0
-flask-sqlalchemy=2.4.1
-flask-sqlacodegen=1.1.7
-pymysql=0.9.3
-flask-sockets=0.2.1
+flask==1.1.1
+flask_script==2.0.6
+paramiko==2.7.0
+flask-sqlalchemy==2.4.1
+flask-sqlacodegen==1.1.7
+pymysql==0.9.3
+flask-sockets==0.2.1
