--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "minimist": "^1.2.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "websocket-extensions": "^0.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
